--- a/themes/cyabstyle/source/css/style.css
+++ b/themes/cyabstyle/source/css/style.css
@@ -578,7 +578,7 @@ body.custom-font-enabled {
 }
 a {
 	outline: none;
-	color: rgb(81, 165, 168); /*Article Title Normal*/
+	color: #263238; /*Article Title Normal*/
     text-decoration: none;
 }
 a:hover {
@@ -988,9 +988,13 @@ article.sticky .featured-post {
 .comment-content blockquote {
     margin: 0 0 24px;
     margin: 0 0 1.714285714rem;
-    border-left: 4px solid #aaa;
+    border-left: 4px solid #526069;
+    border-top: 1px solid #999;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    border-radius: 2px;
     padding: 0 15px;
-    color: #aaa;
+    color: #263238;
 }
 .entry-content blockquote>:first-child,
 .comment-content blockquote>:first-child {
