--- a/themes/archer/layout/_partial/base-head.ejs
+++ b/themes/archer/layout/_partial/base-head.ejs
@@ -7,6 +7,7 @@
 <% } %>
 
 <head>
+    <meta name="baidu-site-verification" content="rG8l25VsFs" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
     <title><%= title %></title>
