--- a/themes/archer/layout/_partial/base-footer.ejs
+++ b/themes/archer/layout/_partial/base-footer.ejs
@@ -7,12 +7,12 @@
     <% } %>
     <!-- powered by Hexo  -->
     <div class="copyright">
-        <span id="hexo-power">Powered by <a href="https://hexo.io/" target="_blank">Hexo</a></span><span class="iconfont-archer power">&#xe635;</span><span id="theme-info">theme <a href="https://github.com/fi3ework/hexo-theme-archer" target="_blank">Archer</a></span>
+        <span id="hexo-power"> © 2018 </span><span class="iconfont-archer power">&#xe635;</span><span id="theme-info">Oranges </span>
     </div>
     <!-- 不蒜子  -->
     <% if (theme.busuanzi) { %>
     <div class="busuanzi-container">
-        <span id="busuanzi_container_site_pv">PV: <span id="busuanzi_value_site_pv"></span>
+        <span id="busuanzi_container_site_pv">访问人数: <span id="busuanzi_value_site_pv"></span>
         </span>
     </div>
     <% } %>
