--- a/themes/archer/layout/_partial/base-head.ejs
+++ b/themes/archer/layout/_partial/base-head.ejs
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
     <title><%= title %></title>
     <%- partial('critical-css/critical-style') %>
+    <link rel="alternate" href="https://zcheng.site/" hreflang="zh-cn" />
     <link rel="preload" href= <%- url_for("css/style.css?v=20180317") %> as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" type="text/css" href= <%- url_for("css/mobile.css?v=20180317") %> media="(max-width: 980px)"/>
     <% if(is_post()) { %>
