add search modules =>algolia

--- a/themes/archer/layout/_partial/base-head.ejs
+++ b/themes/archer/layout/_partial/base-head.ejs
@@ -6,12 +6,12 @@
 <% title = theme.SEO_title %>
 <% } %>
 <head>
-    <link rel="alternate" href="https://zcheng.site/" hreflang="zh-cn" />
-    <link rel="alternate" href="https://zcheng.site/sshkeys.html" hreflang="zh-cn" />
-    <link rel="alternate" href="https://zcheng.site/Sanhe.html" hreflang="zh-cn" />
-    <link rel="alternate" href="https://zcheng.site/linux.html" hreflang="zh-cn" />
-    <link rel="alternate" href="https://zcheng.site/second.html" hreflang="zh-cn" />
-    <link rel="alternate" href="https://zcheng.site/orange.html" hreflang="zh-cn" />
+    <link rel="alternate" href="https://zcheng.site/" hreflang="zh-Hans" />
+    <link rel="alternate" href="https://zcheng.site/sshkeys.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="https://zcheng.site/Sanhe.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="https://zcheng.site/linux.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="https://zcheng.site/second.html" hreflang="zh-Hans" />
+    <link rel="alternate" href="https://zcheng.site/orange.html" hreflang="zh-Hans" />
     <meta name="baidu-site-verification" content="rG8l25VsFs" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
