--- a/themes/theme-bmw/source/css/github-markdown.css
+++ b/themes/theme-bmw/source/css/github-markdown.css
@@ -433,11 +433,11 @@
 }
 
 .markdown-body blockquote {
-  margin: 3rem 0;
+  /*margin: 3rem 0;*/
   padding: 15px;
   color: #555;
   border-left: 0.25em solid #555;
-  background: #fdfdfd;
+  background: #EEEEEE;
   border-radius: 3px;
 }
 
