--- a/themes/theme-bmw/layout/_partial/header.ejs
+++ b/themes/theme-bmw/layout/_partial/header.ejs
@@ -27,7 +27,7 @@
   } else if (title === "categories") {
     title = "分类"
   } else if (title === "friends") {
-    title = "友链"
+    title = "朋友"
   }
   %>
   
