--- a/themes/bmw/source/css/base.css
+++ b/themes/bmw/source/css/base.css
@@ -76,10 +76,10 @@ header {
     .site-brand .site-title a {
       transition: all 0.1s linear;
       display: inline-block;
-      color: #000;
-      font-weight: 333;
-      font-family: "Sakura";
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); }
+      color: #666;
+      font-weight: 700;
+      font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
+  }
 
 .site-navigation {
   text-align: center;
@@ -151,7 +151,7 @@ header {
       top: 50%;
       transform: translateY(-50%);
       font-size: 3rem;
-      color: #333; }
+      color: #666; }
 
   .site-navigation {
     text-align: left;
@@ -216,20 +216,27 @@ header {
     left: 20px; }
   .timeline .collection-title {
     position: relative;
-    margin: 60px 0; }
-    .timeline .collection-title h2 {
-      margin-left: 20px; }
-    .timeline .collection-title::before {
-      content: " ";
-      position: absolute;
-      left: 0;
-      top: 50%;
-      margin-left: -6px;
-      margin-top: -4px;
-      width: 8px;
-      height: 8px;
-      background: #bbb;
-      border-radius: 50%; }
+    margin: 60px 0; 
+  }
+  .timeline .collection-title h2 {
+    margin-left: 20px;
+    color: #666;
+    font-weight: 700;
+    font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
+    /*font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;*/
+  }
+  .timeline .collection-title::before {
+    content: " ";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-left: -6px;
+    margin-top: -4px;
+    width: 8px;
+    height: 8px;
+    background: #bbb;
+    border-radius: 50%;
+  }
   .timeline .posts-collapse {
     margin: 30px 0;
     position: relative;
