--- a/themes/bmw/layout/post.ejs
+++ b/themes/bmw/layout/post.ejs
@@ -41,7 +41,11 @@
   </div>
   <% if(theme.leancloud.comment){ %>
     <%- partial("_partial/comment") %>
-  <% } %> 
+  <% } %>
+
+  <% if(theme.gitalk.comment){ %>
+    <%- partial("_partial/comment") %>
+  <% } %>
 
 </div>
 <% } %>
@@ -51,10 +55,14 @@
     <div class="markdown-body">
       <%- page.content %>
     </div>
-    
+
     <% if(theme.leancloud.comment){ %>
       <%- partial("_partial/comment") %>
-    <% } %> 
+    <% } %>
+
+    <% if(theme.gitalk.comment){ %>
+      <%- partial("_partial/comment") %>
+    <% } %>
   </div>
 <% } %>
 
@@ -82,11 +90,15 @@
 
   <% if(theme.leancloud.comment){ %>
     <%- partial("_partial/comment") %>
-  <% } %> 
+  <% } %>
 
   <% if(theme.leancloud.timer){ %>
     <%- partial("_partial/timer") %>
-  <% } %> 
+  <% } %>
+
+  <% if(theme.gitalk.comment){ %>
+    <%- partial("_partial/comment") %>
+  <% } %>
 
 </div>
 <% } %>
