--- a/themes/bmw/layout/_partial/header.ejs
+++ b/themes/bmw/layout/_partial/header.ejs
@@ -84,15 +84,18 @@
   <% } %>
 
   <!-- gitalk comments -->
-  <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+  <% if(theme.gitalk.enable) { %>
+    <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+  <% } %>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126364107-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-126364107-1');
-  </script>
+  <% if(theme.gtag.enable) { %>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%- theme.gtag.gtagkey %>"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '<%- theme.gtag.gtagkey %>');
+    </script>
+  <% } %>
 </head>
