--- a/themes/bmw/layout/_partial/comment.ejs
+++ b/themes/bmw/layout/_partial/comment.ejs
@@ -5,7 +5,7 @@
   <div id="vcomments"></div>
 <% } %>
 
-<% if(theme.gitalk.comment) { %>
+<% if(theme.gitalk.enable) { %>
   <div id="gitalk-container"></div>
 <% } %>
 
