--- a/themes/bmw/layout/post.ejs
+++ b/themes/bmw/layout/post.ejs
@@ -80,7 +80,7 @@
     <%- partial("_partial/timer") %>
   <% } %>
 
-  <% if(theme.gitalk.comment){ %>
+  <% if(theme.gitalk.enable){ %>
     <%- partial("_partial/comment") %>
   <% } %>
 
