--- a/themes/oranges/layout/index.ejs
+++ b/themes/oranges/layout/index.ejs
@@ -1,6 +1,5 @@
-<%- partial('_partial/header') %>
-<body>
+<div class="container">
   <% site.posts.sort("date", "desc").each(function(post){ %>
   <%- partial("_partial/post_entry", {post: post}) %>
   <% }) %>
-</body>
+</div>
