--- a/themes/bmw/layout/_partial/footer.ejs
+++ b/themes/bmw/layout/_partial/footer.ejs
@@ -1,9 +1,6 @@
 <footer>
   <p class="site-info">
-    <span id="time-to-now"></span>
-    <br>
-    Theme - <a href="https://github.com/dongyuanxin/theme-bmw">BMW</a> | Made With 💗 | Powered by <a href="https://godbmw.com/">GodBMW</a>
-    <br>
+    Theme - <a href="https://github.com/dongyuanxin/theme-bmw">BMW</a> |
     <% if(theme.footer.more){ %>
       <%- theme.footer.more %>
     <% } %>
