--- a/themes/bmw/layout/_partial/footer.ejs
+++ b/themes/bmw/layout/_partial/footer.ejs
@@ -6,6 +6,8 @@
     <% } %>
     <br />
     <a href="http://www.beian.miit.gov.cn" target="_blank">鄂ICP备18028045号</a>
+    <br />
+    <span>已运行</span><span id="time-to-now"></span>
   </p>
 </footer>
 
