--- a/themes/oranges/layout/index.ejs
+++ b/themes/oranges/layout/index.ejs
@@ -1,3 +1,21 @@
-<div class="container">
-  <%- partial('_partial/post_entry') %>
+<div class="container index">
+  <div class="post-list">
+    <% page.posts.sort('date', -1).each(function(item) { %>
+      <div class="post-item" title="<%- item.title %>">
+        <span class="time-m-d"><%- item.date.format("YYYY-MM-DD") %></span>
+        <a href="<%- url_for(item.path) %>">
+          <span><%- item.title %></span>
+        </a>
+      </div>
+    <% }) %>
+  </div>
+  <nav class="post-navigation">
+    <% if(page.prev !== 0){ %>
+      <a href="<%- url_for(page.prev_link)%>"><i class="iconfont icon-prev"></i></a>
+    <% } %>
+    <span class="page-num"><%- page.current%> / <%- page.total -%></span>
+    <% if(page.next !== 0){ %>
+      <a href="<%- url_for(page.next_link)%>"><i class="iconfont icon-next"></i></a>
+    <% } %>
+  </nav>
 </div>
