--- a/themes/oranges/source/css/base.css
+++ b/themes/oranges/source/css/base.css
@@ -4,31 +4,39 @@
 }
 
 #app {
-  height: 100%;
   width: 770px;
   z-index: 10;
   position: relative;
   margin: 0 auto;
-  overflow: hidden;
+}
+
+.header {
+  padding: 50px 0;
 }
 
 .container {
-  height: 100%;
-  padding: 300px 20px 300px 20px;
+  min-height: calc(100vh - 363px);
+  padding: 0 30px;
 }
 
 .time-y, .time-m-d {
   color: #666;
-  font-weight: 700;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .time-m-d {
+  margin-right: 30px;
+}
+
+.tag-details .time-m-d, .archives .time-m-d {
   margin: 0 30px;
 }
 
-.home-page-content {
+.post-item {
   margin-bottom: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 a {
@@ -40,17 +48,15 @@ a {
 a:hover {
   color: black;
 }
-.header {
-  overflow: hidden;
-  height: 70px;
-  margin-bottom: 50px;
+
+.avatar {
+  text-align: center;
+  padding-bottom: 50px;
 }
-.portrait {
-  float: left;
-}
-.portrait img {
-  height: 70px;
-  width: 70px;
+
+.avatar img {
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
 }
 
@@ -60,17 +66,99 @@ a:hover {
 }
 
 .content-title {
-  margin-bottom: 30px;
+  color: #666;
+  margin-bottom: 20px;
+  font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .navbar {
-  float: right;
-  height: 70px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .navbar ul li {
   display: inline;
   margin-left: 30px;
+}
+
+.navbar ul li a {
+  font-weight: 600;
+}
+
+.post-navigation {
+  padding: 20px 0;
+  text-align: right;
+  color: #666;
+}
+
+.post-navigation a {
+  color: #000;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.post-navigation .page-num {
+  padding: 0 10px;
+}
+
+.footer {
+  padding: 30px 0 10px;
+  font-size: 14px;
+  color: #aaa;
+}
+
+.social {
+  padding-bottom: 10px;
+}
+
+.social ul {
+  text-align: center;
+}
+
+.social ul li {
+  display: inline-block;
+  padding: 0 5px;
+}
+
+.copyright {
+  text-align: center;
+}
+
+
+.tag-list li {
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.tag-list-count {
+  padding: 0 10px;
+  color: #aaa;
+}
+
+.tag-list-count::before {
+  content: "( ";
+}
+
+.tag-list-count::after {
+  content: " )";
+}
+
+.post-details .post-title {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+  color: #666;
+  padding-bottom: 10px;
+}
+
+.post-details .post-attach {
+  font-size: 14px;
+  text-align: center;
+  padding-bottom: 30px;
+  color: #666;
+}
+
+.post-attach .post-pubtime, .post-attach .post-tags {
+  padding: 0 10px;
 }
