--- a/themes/oranges/layout/index.ejs
+++ b/themes/oranges/layout/index.ejs
@@ -2,20 +2,22 @@
   <div class="post-list">
     <% page.posts.sort('date', -1).each(function(item) { %>
       <div class="post-item" title="<%- item.title %>">
-        <span class="time-m-d"><%- item.date.format("YYYY-MM-DD") %></span>
-        <a href="<%- url_for(item.path) %>">
-          <span><%- item.title %></span>
-        </a>
+        <div class="time-m-d"><%- item.date.format("YYYY-MM-DD") %></div>
+        <div class="title">
+          <a href="<%- url_for(item.path) %>">
+            <span><%- item.title %></span>
+          </a>
+        </div>
       </div>
     <% }) %>
   </div>
   <nav class="post-navigation">
     <% if(page.prev !== 0){ %>
-      <a href="<%- url_for(page.prev_link)%>"><i class="iconfont icon-prev"></i></a>
+      <a href="<%- url_for(page.prev_link)%>"><i class="iconfont icon-angleleft"></i></a>
     <% } %>
     <span class="page-num"><%- page.current%> / <%- page.total -%></span>
     <% if(page.next !== 0){ %>
-      <a href="<%- url_for(page.next_link)%>"><i class="iconfont icon-next"></i></a>
+      <a href="<%- url_for(page.next_link)%>"><i class="iconfont icon-angleright"></i></a>
     <% } %>
   </nav>
 </div>
