--- a/themes/oranges/source/css/base.css
+++ b/themes/oranges/source/css/base.css
@@ -3,11 +3,31 @@
   padding: 0;
 }
 
+html, body {
+  font-size: 10px;
+}
+
 #app {
-  width: 770px;
-  z-index: 10;
   position: relative;
   margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+  color: #666;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: black;
+}
+
+.flex-container {
+  min-height: calc(100vh - 290px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
@@ -15,43 +35,41 @@
 }
 
 .container {
-  min-height: calc(100vh - 363px);
-  padding: 0 30px;
+  width: 90%;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
-.time-y, .time-m-d {
+.post-item {
+  display: flex;
+  font-size: 1.6rem;
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+.post-item .time-m-d {
+  flex-shrink: 0;
+  margin-right: 30px;
   color: #666;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
 }
 
-.time-m-d {
-  margin-right: 30px;
+.post-item .title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .tag-details .time-m-d, .archives .time-m-d {
   margin: 0 30px;
 }
 
-.post-item {
-  margin-bottom: 20px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-a {
-  text-decoration: none;
-  background-color: transparent;
-  color: #666;
-}
-
-a:hover {
-  color: black;
-}
-
 .avatar {
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .avatar img {
@@ -60,12 +78,20 @@ a:hover {
   border-radius: 50%;
 }
 
+.avatar .nickname {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #666;
+  padding-top: 10px;
+}
+
 .content {
   clear: both;
   padding: 0 20px;
 }
 
 .content-title {
+  font-size: 1.6rem;
   color: #666;
   margin-bottom: 20px;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
@@ -79,22 +105,20 @@ a:hover {
 
 .navbar ul li {
   display: inline;
-  margin-left: 30px;
-}
-
-.navbar ul li a {
-  font-weight: 600;
+  margin: 0 15px;
+  font-size: 1.6rem;
+  font-weight: bold;
 }
 
 .post-navigation {
+  font-size: 1.5rem;
   padding: 20px 0;
   text-align: right;
   color: #666;
 }
 
-.post-navigation a {
+.post-navigation i {
   color: #000;
-  font-size: 20px;
   font-weight: 600;
 }
 
@@ -104,7 +128,7 @@ a:hover {
 
 .footer {
   padding: 30px 0 10px;
-  font-size: 14px;
+  font-size: 1.5rem;
   color: #aaa;
 }
 
@@ -127,8 +151,9 @@ a:hover {
 
 
 .tag-list li {
+  font-size: 1.6rem;
   display: inline-block;
-  padding-right: 10px;
+  padding: 10px;
 }
 
 .tag-list-count {
@@ -144,16 +169,34 @@ a:hover {
   content: " )";
 }
 
+.friend-list {
+  padding-left: 30px;
+}
+
+.friend-list-item {
+  font-size: 1.6rem;
+  padding: 10px;
+}
+
+.friend-list-item .nickname {
+  padding-right: 10px;
+}
+
+.post-details {
+  width: 90%;
+  max-width: 800px;
+}
+
 .post-details .post-title {
   text-align: center;
-  font-size: 25px;
+  font-size: 2.2rem;
   font-weight: 600;
   color: #666;
   padding-bottom: 10px;
 }
 
 .post-details .post-attach {
-  font-size: 14px;
+  font-size: 1.4rem;
   text-align: center;
   padding-bottom: 30px;
   color: #666;
@@ -161,4 +204,13 @@ a:hover {
 
 .post-attach .post-pubtime, .post-attach .post-tags {
   padding: 0 10px;
+}
+
+@media (max-width: 768px) {
+  .time-m-d {
+    margin-right: 15px;
+  }
+  .tag-details .time-m-d, .archives .time-m-d {
+    margin: 0 15px;
+  }
 }
