--- a/themes/oranges/source/css/github-markdown.css
+++ b/themes/oranges/source/css/github-markdown.css
@@ -11,7 +11,7 @@
   color: #24292e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
+  font-size: 1.6rem;
   line-height: 2;
   word-wrap: break-word;
 }
@@ -216,14 +216,17 @@
 }
 
 .markdown-body a {
-  color: #1abc9c;
+  color: #666;
   text-decoration: none;
-  border-bottom: 1px solid #1abc9c;
-  font-size: 1.1em;
+  border-bottom: 1px solid #666;
+  font-size: 1em;
+  transition: color 0.3s;
 }
 
 .markdown-body a:hover {
   text-decoration: none;
+  color: black;
+  border-bottom: 1px solid black;
 }
 
 .markdown-body strong {
