--- a/source/css/something.css
+++ b/source/css/something.css
@@ -1,3 +1,4 @@
+/*transition-demo*/
 .transition-demo {
   position: relative;
   cursor: pointer;
@@ -5,6 +6,7 @@
   transition: all 0.1s;
 }
 
+/*demo1*/
 .transition-demo.demo-1::after {
   content: "";
   position: absolute;
@@ -22,6 +24,7 @@
   transform-origin: center left;
 }
 
+/*demo2*/
 .transition-demo.demo-2:hover {
   color: #fff;
   z-index: 1;
@@ -41,5 +44,76 @@
   z-index: -1;
 }
 .transition-demo.demo-2:hover::after {
+  transform: scaleY(1);
+}
+
+/*demo3*/
+.parent {
+  padding: 2px 0;
+}
+.child {
+  padding: 0 2px;
+}
+.parent::before,
+.parent::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background: #262626;
+  transform: scaleX(0); /*通过设置 X 轴的值来定义缩放转换*/
+  transition: transform 0.3s;
+}
+
+.parent::before {
+  top: 0;
+  transform-origin: center right;
+}
+
+.parent::after {
+  bottom: 0;
+  transform-origin: center left;
+}
+
+.parent:hover::before {
+  transform-origin: center left;
+  transform: scaleX(1);
+}
+
+.parent:hover::after {
+  transform-origin: center right;
+  transform: scaleX(1);
+}
+
+.child::before,
+.child::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background: #262626;
+  transform: scaleY(0); /*通过设置 Y 轴的值来定义缩放转换*/
+  transition: transform 0.3s;
+}
+
+.child::before {
+  left: 0;
+  transform-origin: center top;
+}
+
+.child::after {
+  right: 0;
+  transform-origin: center bottom;
+}
+
+.child:hover::before {
+  transform-origin: center bottom;
+  transform: scaleY(1);
+}
+
+.child:hover::after {
+  transform-origin: center top;
   transform: scaleY(1);
 }
