--- a/themes/oranges/layout/_partial/header.ejs
+++ b/themes/oranges/layout/_partial/header.ejs
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <meta name="author" content="oranges, 1451426471@qq.com" />
+  <meta name="author" content="zchengsite, 1451426471@qq.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <% if(is_home() && page.current > 1){ %>
     <meta name="robots" content="noindex" />
@@ -35,10 +35,6 @@
   <% if (theme.favicon.enable){ %>
     <link rel="apple-touch-icon" href="<%- theme.favicon.touch_icon %>">
     <link rel="icon" href="<%- theme.favicon.icon %>">
-  <% } %>
-
-  <% if (theme.rss.enable){ %>
-    <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
 
   <!-- Raleway-Font -->
