--- a/themes/oranges/layout/_partial/header.ejs
+++ b/themes/oranges/layout/_partial/header.ejs
@@ -59,4 +59,14 @@
       gtag('config', '<%- theme.gtag.gtagkey %>');
     </script>
   <% } %>
+
+  <!-- gitalk comments -->
+  <% if(theme.comments.enable && theme.comments.gitalk.enable) { %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+    <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+  <% } %>
+
+  <% if(theme.comments.enable && theme.comments.valine.enable) { %>
+    <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+  <% } %>
 </head>
