--- a/themes/oranges/layout/_partial/header.ejs
+++ b/themes/oranges/layout/_partial/header.ejs
@@ -66,6 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
   <% } %>
 
+  <!-- valine comments -->
   <% if(theme.comments.enable && theme.comments.valine.enable) { %>
     <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
   <% } %>
