--- a/source/css/something.css
+++ b/source/css/something.css
@@ -316,8 +316,8 @@
   border: 1.4rem solid gray;
   border-left-width: 0;
   border-right-color: transparent;
-  border-right-top-radius: 3px;
-  border-right-bottom-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 /*水平带小折角书签*/
@@ -336,8 +336,8 @@
   border: 1.4rem solid gray;
   border-left-width: 0;
   border-right-color: transparent;
-  border-right-top-radius: 3px;
-  border-right-bottom-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 .border-dome.demo-3::before {
@@ -348,6 +348,43 @@
   border: 0.8rem solid #555555;
   border-top-color: transparent;
   border-left-color: transparent;
+}
+
+.border-demo.demo-4 {
+  width: 0rem;
+  height: 0rem;
+  position: relative;
+  margin-left: 20px;
+}
+
+.border-demo.demo-4::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: solid #555555;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-bottom-width: 1rem;
+  border-top-width: 1rem;
+  border-left-width: 1rem;
+  border-right-width: 1rem;
+  border-bottom-left-radius: 3px;
+}
+
+.border-demo.demo-4::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  border: 0;
+  border: solid #555555;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-top-width: 1rem;
+  border-bottom-width: 1rem;
+  border-left-width: 1rem;
+  border-right-width: 1rem;
+  border-top-right-radius: 3px;
 }
 
 /*to-be-continued*/
