--- a/source/css/something.css
+++ b/source/css/something.css
@@ -125,10 +125,10 @@
     height: 2em;
     border-radius: 50%;
     background: gray;
-    animation: demo-1 1s infinite ease-in-out;
+    animation: animation-demo-1 1s infinite ease-in-out;
   }
 
-  @keyframes demo-1 {
+  @keyframes animation-demo-1 {
     0% {
       transform: scale(0);
     }
@@ -144,7 +144,7 @@
     width: 1.5em;
     height: 1.5em;
     border-radius: 50%;
-    animation: demo-2 2s infinite ease-in-out both;
+    animation: animation-demo-2 2s infinite ease-in-out both;
   }
 
   .animation-demo.demo-2::before {
@@ -154,7 +154,7 @@
     width: 1.5em;
     height: 1.5em;
     border-radius: 50%;
-    animation: demo-2 2s infinite ease-in-out both 0.2s;
+    animation: animation-demo-2 2s infinite ease-in-out both 0.2s;
   }
 
   .animation-demo.demo-2::after {
@@ -164,15 +164,15 @@
     width: 1.5em;
     height: 1.5em;
     border-radius: 50%;
-    animation: demo-2 2s infinite ease-in-out both 0.4s;
+    animation: animation-demo-2 2s infinite ease-in-out both 0.4s;
   }
 
-  @keyframes demo-2 {
+  @keyframes animation-demo-2 {
     0%, 100% {
-      box-shadow: 0 1.5em 0 -1.5em #a3afb7;
+      box-shadow: 0 1.5em 0 -1.5em gray;
     }
     50% {
-      box-shadow: 0 1.5em 0 0 #a3afb7;
+      box-shadow: 0 1.5em 0 0 gray;
     }
   }
 
@@ -361,7 +361,7 @@
   content: "";
   position: absolute;
   right: 0;
-  border: 1rem solid #555555;
+  border: 1rem solid gray;
   border-top-color: transparent;
   border-left-color: transparent;
   border-bottom-left-radius: 3px;
@@ -371,7 +371,7 @@
   content: "";
   position: absolute;
   left: 0;
-  border: 1rem solid #555555;
+  border: 1rem solid gray;
   border-bottom-color: transparent;
   border-right-color: transparent;
   border-top-right-radius: 3px;
@@ -383,7 +383,6 @@
   width: 0rem;
   height: 0rem;
   position: relative;
-  /*margin: 0 20px;*/
 }
 
 .border-demo .demo-5-1 {
@@ -404,11 +403,11 @@
   content: "";
   position: absolute;
   right: 0;
-  border: 1rem solid #555555;
+  border: 1rem solid gray;
   border-top-color: transparent;
   border-left-color: transparent;
   border-bottom-left-radius: 3px;
-  animation: demo-5 infinite ease-in-out both 1.5s;
+  animation: border-demo-5 infinite ease-in-out both 1.5s;
   transform-origin: right center;
 }
 
@@ -418,11 +417,11 @@
   content: "";
   position: absolute;
   left: 0;
-  border: 1rem solid #555555;
+  border: 1rem solid gray;
   border-bottom-color: transparent;
   border-right-color: transparent;
   border-top-right-radius: 3px;
-  animation: demo-5 infinite ease-in-out both 1.5s;
+  animation: border-demo-5 infinite ease-in-out both 1.5s;
   transform-origin: left center;
 }
 
@@ -436,7 +435,7 @@
   animation-delay: 0.4s
 }
 
-@keyframes demo-5 {
+@keyframes border-demo-5 {
   0%, 100% {
     transform: scale(1);
   }
@@ -445,6 +444,49 @@
   }
 }
 
+.border-demo.demo-6 {
+  position: relative;
+  height: 1.5rem;
+  width: 1rem;
+  margin: 0 40px;
+  background: transparent;
+  transform: skewX(-25deg);
+  border-radius: 3px;
+  animation: border-demo-6 1.8s infinite ease-in-out 0s both;
+}
+
+.border-demo.demo-6::before {
+  content: "";
+  position: absolute;
+  height: 1.5rem;
+  width: 1rem;
+  left: -20px;
+  top: 0;
+  background: transparent;
+  border-radius: 3px;
+  animation: border-demo-6 1.8s infinite ease-in-out -.16s both;
+}
+
+.border-demo.demo-6::after {
+  content: "";
+  position: absolute;
+  height: 1.5rem;
+  width: 1rem;
+  right: -20px;
+  top: 0;
+  background: transparent;
+  border-radius: 3px;
+  animation: border-demo-6 1.8s infinite ease-in-out .16s both;
+}
+
+@keyframes border-demo-6 {
+  0%, 80%, 100% {
+    box-shadow: 0 1.5rem 0 -0.75rem gray;
+  }
+  40% {
+    box-shadow: 0 1.5rem 0 0 gray;
+  }
+}
 
 /*to-be-continued*/
 .to-be-continued dot {
