--- a/source/scss/something.scss
+++ b/source/scss/something.scss
@@ -1,20 +1,505 @@
 /*transition-demo*/
+
 .transition-demo {
   position: relative;
   cursor: pointer;
   color: #24292e;
   transition: all 0.1s;
 
-  &.demo-1::after {
+  /*demo1*/
+  &.demo-1 {
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      transition: transform 0.3s ease;
+      height: 2px;
+      background: linear-gradient(to right, #24292e, #666);
+      transform: scaleX(0);
+      transform-origin: center right;
+    }
+    &:hover::after {
+      transform: scaleX(1);
+      transform-origin: center left;
+    }
+  }
+
+  /*demo-2*/
+  &.demo-2 {
+    &:hover {
+      color: #fff;
+      z-index: 1;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -2px;
+      right: -2px;
+      transition: transform 0.1s linear;
+      background: linear-gradient(#24292e, #666);
+      transform: scaleY(0);
+      transform-origin: bottom;
+      z-index: -1;
+    }
+    &:hover::after {
+      transform: scaleY(1);
+    }
+  }
+
+  @mixin demo-3($transform) {
     content: "";
     position: absolute;
+    background: #262626;
+    transform: $transform;
+    transition: transform 0.3s;
+  }
+
+  &.demo-3-parent {
+    padding: 2px 0;
+
+    &::before, &::after {
+      @include demo-3(scaleX(0))
+      left: 0;
+      right: 0;
+      height: 2px;
+    }
+
+    &::before {
+      top: 0;
+      transform-origin: center right;
+    }
+
+    &::after {
+      bottom: 0;
+      transform-origin: center left;
+    }
+
+    &:hover::before {
+      transform-origin: center left;
+      transform: scaleX(1);
+    }
+
+    &:hover::after {
+      transform-origin: center right;
+      transform: scaleX(1);
+    }
+  }
+  &.demo-3-child {
+    padding: 0 2px;
+
+    &::before, &::after {
+      @include demo-3(scaleY(0))
+      top: 0;
+      bottom: 0;
+      width: 2px;
+    }
+
+    &::before {
+      left: 0;
+      transform-origin: center top;
+    }
+
+    &::after {
+      right: 0;
+      transform-origin: center bottom;
+    }
+
+    &:hover::before {
+      transform-origin: center bottom;
+      transform: scaleY(1);
+    }
+
+    &:hover::after {
+      transform-origin: center top;
+      transform: scaleY(1);
+    }
+  }
+}
+
+/*animation-demo*/
+/*demo-1*/
+.animation-demo {
+  &.demo-1 {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    background: gray;
+    animation: animation-demo-1 1s infinite ease-in-out;
+    @keyframes animation-demo-1 {
+      0% {
+        transform: scale(0);
+      }
+      100% {
+        opacity: 0;
+        transform: scale(1);
+      }
+    }
+  }
+  &.demo-2 {
+    @mixin demo-2-common($delay) {
+      width: 1.5em;
+      height: 1.5em;
+      border-radius: 50%;
+      animation: animation-demo-2 2s infinite ease-in-out both $delay;
+    }
+
+    position: relative;
+    @include demo-2-common(0s);
+
+    &::before {
+      @include demo-2-common(0.2s);
+      content: "";
+      position: absolute;
+      left: 2em;
+    }
+    &::after {
+      @include demo-2-common(0.4s);
+      content: "";
+      position: absolute;
+      left: 4em;
+    }
+    @keyframes animation-demo-2 {
+      0%, 100% {
+        box-shadow: 0 1.5em 0 -1.5em gray;
+      }
+      50% {
+        box-shadow: 0 1.5em 0 0 gray;
+      }
+    }
+  }
+}
+
+/*css filter*/
+/*filter-shadow*/
+/*demo1 2 3*/
+.filter-shadow {
+  margin: 0 10px;
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  &::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    z-index: -1;
+    background: inherit;
+    position: absolute;
+    top: 10px;
     left: 0;
-    right: 0;
-    bottom: 0;
-    transition: transform 0.3s ease;
-    height: 2px;
-    background: linear-gradient(to right, #24292e, #666);
-    transform: scaleX(0);
-    transform-origin: center right;
+    filter: blur(10px) brightness(80%) opacity(.8);
+    transform: scale(.95);
+  }
+  &.demo-1 {
+    background-image: url("/images/something/css-filter-test1.png");
+  }
+  &.demo-2 {
+    background-image: url("/images/something/css-filter-test2.png");
+  }
+  &.demo-3 {
+    background-image: url("/images/something/css-filter-test3.png");
+  }
+}
+
+/*acrylic*/
+/*demo-1*/
+@mixin acrylic {
+  height: 300px;
+  width: 100%;
+  background: url("/images/something/acrylic.png") no-repeat center/contain;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.acrylic-filer.demo-1 {
+  @include acrylic;
+  .acrylic {
+    padding: 4em 6em;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 1px 8px rgba(0, 0, 0, 0.2);
+    &::before {
+      filter: blur(10px);
+      content: "";
+      position: absolute;
+      left: -10px;
+      top: -10px;
+      right: -10px;
+      bottom: -10px;
+      width: calc(100% + 20px);
+      height: calc(100% + 20px);
+      z-index: -1;
+      background: url("/images/something/acrylic.png") no-repeat center/contain;
+      background-attachment: fixed;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(255,255,255,0.7);
+      z-index: -1;
+    }
+  }
+}
+
+.acrylic-backdrop-filter.demo-2 {
+  @include acrylic;
+  .acrylic {
+    padding: 4em 6em;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 1px 8px rgba(0, 0, 0, 0.2);
+    background: rgba(255,255,255,0.7);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-blend-mode: exclusion;
+  }
+}
+
+/*css border*/
+.border-demo {
+  position: relative;
+  background: gray;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  /*垂直小书签*/
+  &.demo-1 {
+    height: 4.2rem;
+    width: 2.8rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 100%;
+      border: 1.4rem solid gray;
+      border-top-width: 0;
+      border-bottom-color: transparent;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+    }
+  }
+  /*水平小书签*/
+  &.demo-2 {
+    height: 2.8rem;
+    width: 4.2rem;
+    font-size: 1.5rem;
+    line-height: 2.8rem;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 100%;
+      top: 0;
+      border: 1.4rem solid gray;
+      border-left-width: 0;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+    }
+  }
+  /*水平带小折角书签*/
+  &.demo-3 {
+    height: 2.8rem;
+    width: 12rem;
+    font-size: 1.5rem;
+    line-height: 2.8rem;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 100%;
+      top: 0;
+      border: 1.4rem solid gray;
+      border-left-width: 0;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+      border-bottom-right-radius: 3px;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -1.6rem;
+      border: 0.8rem solid #555555;
+      border-top-color: transparent;
+      border-left-color: transparent;
+    }
+  }
+
+  &.demo-4 {
+    @mixin border-demo-4 {
+      content: "";
+      position: absolute;
+      border: 1rem solid gray;
+      border-bottom-left-radius: 3px;
+    }
+    width: 0rem;
+    height: 0rem;
+    position: relative;
+    margin-left: 20px;
+    &::before {
+      @include border-demo-4;
+      right: 0;
+      border-top-color: transparent;
+      border-left-color: transparent;
+      border-bottom-left-radius: 3px;
+    }
+    &::after {
+      @include border-demo-4;
+      left: 0;
+      border-bottom-color: transparent;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+    }
+  }
+  @mixin border-demo-5-mixin($margin) {
+    width: 0rem;
+    height: 0rem;
+    position: relative;
+    margin: $margin;
+  }
+  @mixin border-demo-5-before-after($transform-origin) {
+    content: "";
+    position: absolute;
+    border: 1rem solid gray;
+    animation: border-demo-5 infinite ease-in-out both 1.5s;
+    transform-origin: $transform-origin;
+  }
+  .demo-5-1 {
+    @include border-demo-5-mixin(0 20px);
+    &::before {
+      @include border-demo-5-before-after(right center);
+      border-top-color: transparent;
+      border-left-color: transparent;
+      border-bottom-left-radius: 3px;
+      right: 0;
+    }
+    &::after {
+      @include border-demo-5-before-after(left center);
+      border-bottom-color: transparent;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+      left: 0;
+    }
+  }
+  .demo-5-2 {
+    @include border-demo-5-mixin(0 50px);
+    &::before {
+      @include border-demo-5-before-after(right center);
+      border-top-color: transparent;
+      border-left-color: transparent;
+      animation-delay: 0.2s;
+      border-bottom-left-radius: 3px;
+      right: 0;
+    }
+    &::after {
+      @include border-demo-5-before-after(left center);
+      animation-delay: 0.2s;
+      border-bottom-color: transparent;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+      left: 0;
+    }
+  }
+  .demo-5-3 {
+    @include border-demo-5-mixin(0 80px);
+    &::before {
+      @include border-demo-5-before-after(right center);
+      border-top-color: transparent;
+      border-left-color: transparent;
+      animation-delay: 0.4s;
+      border-bottom-left-radius: 3px;
+      right: 0;
+    }
+    &::after {
+      @include border-demo-5-before-after(left center);
+      animation-delay: 0.4s;
+      border-bottom-color: transparent;
+      border-right-color: transparent;
+      border-top-right-radius: 3px;
+      left: 0;
+    }
+  }
+  @keyframes border-demo-5 {
+    0%, 100% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(0);
+    }
+  }
+
+  &.demo-6 {
+    @mixin border-demo-6($delay) {
+      height: 1.5rem;
+      width: 1rem;
+      background: transparent;
+      border-radius: 3px;
+      animation: border-demo-6 1.8s infinite ease-in-out $delay both;
+    }
+    @include border-demo-6(0s);
+    position: relative;
+    margin: 0 40px;
+    transform: skewX(-25deg);
+    &::before {
+      @include border-demo-6(-0.16s);
+      content: "";
+      position: absolute;
+      left: -20px;
+      top: 0;
+    }
+    &::after {
+      @include border-demo-6(0.16s);
+      content: "";
+      position: absolute;
+      right: -20px;
+      top: 0;
+    }
+
+    @keyframes border-demo-6 {
+      0%, 80%, 100% {
+        box-shadow: 0 1.5rem 0 -0.75rem gray;
+      }
+      40% {
+        box-shadow: 0 1.5rem 0 0 gray;
+      }
+    }
+  }
+}
+
+/*to-be-continued*/
+.to-be-continued dot {
+  display: inline-block;
+  overflow: hidden;
+  height: 1em;
+  line-height: 1;
+  vertical-align: -.25em;
+  &::after {
+    display: block;
+    white-space: pre-wrap;
+    content: "...\A..\A.";
+    animation: loading 3s infinite step-start both;
+  }
+  @keyframes loading {
+    33% {
+      transform: translate3d(0, -2em, 0);
+    }
+    66% {
+      transform: translate3d(0, -1em, 0);
+    }
   }
 }
